<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.barcodewebapp.MainActivity">
    <item
        android:id="@+id/go_home"
        android:orderInCategory="100"
        android:title="@string/go_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/view1"
        android:orderInCategory="100"
        android:title="@string/view_1"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/view2"
        android:orderInCategory="100"
        android:title="@string/view_2"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/testarea"
        android:orderInCategory="100"
        android:title="@string/testarea"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/disable_scaling"
        android:orderInCategory="100"
        android:title="@string/disable_scaling"
        app:showAsAction="never" />
    <item
        android:id="@+id/checkforupdates"
        android:orderInCategory="100"
        android:title="@string/check_for_updates"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>